- Removed Chat everywhere so it only uses Agent instead of ChatAgent - renamed docs file name ChatMemory -> AgentMemory

--- a/examples/notebooks/quickstart.ipynb
+++ b/examples/notebooks/quickstart.ipynb
@@ -112,7 +112,7 @@
     "\n",
     "We will import the necessary libraries for creating the chatbot. Each library serves a specific purpose:\n",
     "- `AgentMemory`: Manages the chat history.\n",
-    "- `BaseChatAgent`: The base class to create a custom chatbot. Can be extended for additional functionality if needed.\n",
+    "- `BaseAgent`: The base class to create a custom chatbot. Can be extended for additional functionality if needed.\n",
     "- `SystemPromptGenerator` and `SystemPromptInfo`: To define and generate system prompts."
    ]
   },
@@ -126,7 +126,7 @@
     "import instructor\n",
     "import openai\n",
     "from atomic_agents.lib.components.agent_memory import AgentMemory\n",
-    "from atomic_agents.agents.base_chat_agent import BaseChatAgent, BaseChatAgentConfig\n",
+    "from atomic_agents.agents.base_agent import BaseAgent, BaseAgentConfig\n",
     "from atomic_agents.lib.components.system_prompt_generator import SystemPromptGenerator, SystemPromptInfo"
    ]
   },
@@ -275,8 +275,8 @@
     "\n",
     "client = instructor.from_openai(openai.OpenAI(api_key=API_KEY))\n",
     "\n",
-    "agent = BaseChatAgent(\n",
-    "    config=BaseChatAgentConfig(\n",
+    "agent = BaseAgent(\n",
+    "    config=BaseAgentConfig(\n",
     "        client=client,\n",
     "        system_prompt_generator=system_prompt_generator,\n",
     "        model='gpt-3.5-turbo',\n",
