--- a/examples/notebooks/yelp_agent.ipynb
+++ b/examples/notebooks/yelp_agent.ipynb
@@ -128,7 +128,7 @@
     "\n",
     "from atomic_agents.lib.components.agent_memory import AgentMemory\n",
     "from atomic_agents.lib.components.system_prompt_generator import SystemPromptGenerator, SystemPromptInfo\n",
-    "from atomic_agents.agents.base_chat_agent import BaseChatAgent, BaseChatAgentOutputSchema, BaseChatAgentConfig\n",
+    "from atomic_agents.agents.base_agent import BaseAgent, BaseAgentOutputSchema, BaseAgentConfig\n",
     "from atomic_agents.lib.tools.yelp_restaurant_finder_tool import YelpSearchTool, YelpSearchToolConfig, YelpSearchToolSchema"
    ]
   },
@@ -277,7 +277,7 @@
    "source": [
     "# Define a custom response schema that can handle both chat responses and Yelp search tool responses\n",
     "class ResponseSchema(BaseModel):\n",
-    "    chosen_schema: Union[BaseChatAgentOutputSchema, YelpSearchToolSchema] = Field(..., description='The response from the chat agent.')\n",
+    "    chosen_schema: Union[BaseAgentOutputSchema, YelpSearchToolSchema] = Field(..., description='The response from the chat agent.')\n",
     "\n",
     "    class Config:\n",
     "        title = 'OutputSchema'\n",
@@ -315,8 +315,8 @@
    ],
    "source": [
     "# Create a chat agent with the specified model, system prompt generator, and memory\n",
-    "agent = BaseChatAgent(\n",
-    "    config=BaseChatAgentConfig(\n",
+    "agent = BaseAgent(\n",
+    "    config=BaseAgentConfig(\n",
     "        client=client, \n",
     "        system_prompt_generator=system_prompt_generator,\n",
     "        model='gpt-3.5-turbo',\n",
@@ -325,7 +325,7 @@
     "    )\n",
     ")\n",
     "\n",
-    "console.print(\"BaseChatAgent with YelpSearchTool is ready.\")\n",
+    "console.print(\"BaseAgent with YelpSearchTool is ready.\")\n",
     "console.print(f'Agent: {initial_memory[0][\"content\"]}')"
    ]
   },
