--- a/examples/notebooks/youtube_knowledge_extraction.ipynb
+++ b/examples/notebooks/youtube_knowledge_extraction.ipynb
@@ -160,7 +160,7 @@
     "from rich.markdown import Markdown\n",
     "from typing import List, Optional\n",
     "\n",
-    "from atomic_agents.agents.base_chat_agent import BaseChatAgent, BaseChatAgentConfig\n",
+    "from atomic_agents.agents.base_agent import BaseAgent, BaseAgentConfig\n",
     "from atomic_agents.lib.components.system_prompt_generator import SystemPromptContextProviderBase, SystemPromptGenerator, SystemPromptInfo\n",
     "from atomic_agents.lib.tools.yt_transcript_scraper import YouTubeTranscriptTool, YouTubeTranscriptToolConfig, YouTubeTranscriptToolSchema"
    ]
@@ -270,8 +270,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "agent = BaseChatAgent(\n",
-    "    config=BaseChatAgentConfig(\n",
+    "agent = BaseAgent(\n",
+    "    config=BaseAgentConfig(\n",
     "        client=client,\n",
     "        system_prompt_generator=SystemPromptGenerator(system_prompt_info),\n",
     "        model='gpt-3.5-turbo',\n",
