--- a/examples/notebooks/multi_agent_quickstart.ipynb
+++ b/examples/notebooks/multi_agent_quickstart.ipynb
@@ -124,7 +124,7 @@
         "import openai\n",
         "from pydantic import create_model\n",
         "from rich.console import Console\n",
-        "from atomic_agents.agents.base_chat_agent import BaseAgentIO, BaseChatAgent, BaseChatAgentConfig\n",
+        "from atomic_agents.agents.base_agent import BaseAgentIO, BaseAgent, BaseAgentConfig\n",
         "from atomic_agents.agents.tool_interface_agent import ToolInterfaceAgent, ToolInterfaceAgentConfig\n",
         "from atomic_agents.lib.tools.search.searx_tool import SearxNGSearchTool, SearxNGSearchToolConfig\n",
         "from atomic_agents.lib.tools.calculator_tool import CalculatorTool, CalculatorToolConfig"
@@ -239,7 +239,7 @@
       "outputs": [],
       "source": [
         "# Create the orchestration agent\n",
-        "orchestration_agent = BaseChatAgent(config=BaseChatAgentConfig(client=client, model='gpt-3.5-turbo', output_schema=UnionResponse))"
+        "orchestration_agent = BaseAgent(config=BaseAgentConfig(client=client, model='gpt-3.5-turbo', output_schema=UnionResponse))"
       ]
     },
     {
